--- a/Basic JavaScript Projects/Project2_functions/index.html
+++ b/Basic JavaScript Projects/Project2_functions/index.html
@@ -8,7 +8,9 @@
 
         <p id="test"></p>
 
-        <p id="learn" onclick="myFunction()">Click Here</p>
+        <p id="learn" onclick="myFunction1()">Click Here</p>
+
+        <p id="fun"></p>
 
 
     </body>
