--- a/Basic JavaScript Projects/index.html
+++ b/Basic JavaScript Projects/index.html
@@ -4,6 +4,18 @@
     <script src="Project1_expressions_alert/JS/main.js"></script>
   </head>
 <body>
+  <p>Click the button to display the date.</p>
+
+<button onclick="displayDate()">The time is?</button>
+
+<script>
+function displayDate() {
+  document.getElementById("demo").innerHTML = Date();
+}
+</script>
+
+<p id="demo"></p>
+
 
 
 
