--- a/Basic JavaScript Projects/Project9_countdown_slideshow/index.html
+++ b/Basic JavaScript Projects/Project9_countdown_slideshow/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="./CSS/main.css">
-        <script src="./JS/main.js"></script>
+        <script src="./JS/main.js" defer></script>
     </head>
     <body>
 
