--- a/Calculator/calculator.html
+++ b/Calculator/calculator.html
@@ -5,7 +5,7 @@
         <title>Calculator</title>
         <meta name="description" content="A basic HTML, CSS and JavaScript Calculator ">
         <meta name="author" content="Your_Name_Here">
-        <script src="JavaScript/Calculator_JavaScript.js" defer></script>
+        <script src="./JS/Calcuator_JavaScript.js" defer></script>
         <link rel="stylesheet" href="CSS/Calculator_CSS.css">
     </head>
     <body>
